[Alto] Fixed mobile menu background in dark mode
fixes https://github.com/TryGhost/Themes/issues/261

--- a/assets/css/misc/dark.css
+++ b/assets/css/misc/dark.css
@@ -32,6 +32,10 @@
     opacity: 1;
 }
 
+.dark-mode .gh-head-actions {
+    background-color: transparent !important;
+}
+
 .dark-mode .gh-burger::before,
 .dark-mode .gh-burger::after,
 .dark-mode hr,
